<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/row_transaksi_tarik"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"

    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:weightSum="2"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:layout_weight="1"
            android:id="@+id/tanggal_tarik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/picture"
            android:text="@string/tanggal_tarik"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignTop="@+id/picture"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/nama"
            android:fontFamily="@font/nunitosans_regular"
            android:textColor="#808080" />

        <TextView
            android:id="@+id/jumlah_tarik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_alignTop="@+id/picture"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunitosans_regular"
            android:text="@string/jumlah_tarik"
            android:textColor="#808080" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/layoutName"
        android:background="#d4d4d4"
        android:layout_alignLeft="@+id/layoutName" />
</RelativeLayout>