<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfile">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@color/colorPrimary"
                android:id="@+id/rv1"/>

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/userlogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:id="@+id/up_gambar"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/up_gambar"
                android:hint="@string/nama"
                android:id="@+id/up_nama"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/gotham_bold"
                android:layout_marginTop="10dp"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_nik"
                android:text="@string/nik"
                android:layout_below="@id/rv1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_nik"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_nik"
                android:hint="@string/nik"
                android:fontFamily="@font/nunitosans_regular"
                android:textColor="#000"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_password"
                android:text="@string/password"
                android:layout_below="@id/up_nik"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_password"
                android:hint="@string/password"
                android:fontFamily="@font/nunitosans_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_alamat"
                android:text="@string/alamat"
                android:layout_below="@id/up_password"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_alamat"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_alamat"
                android:hint="@string/alamat"
                android:fontFamily="@font/nunitosans_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_rt"
                android:text="@string/rt"
                android:layout_below="@id/up_alamat"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_rt"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_rt"
                android:hint="@string/rt"
                android:fontFamily="@font/nunitosans_regular"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_telepon"
                android:text="@string/telepon"
                android:layout_below="@id/up_rt"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_telepon"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_telepon"
                android:hint="@string/telepon"
                android:fontFamily="@font/nunitosans_regular"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_email"
                android:text="@string/email"
                android:layout_below="@id/up_telepon"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_email"
                android:hint="@string/email"
                android:fontFamily="@font/nunitosans_regular"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_saldo"
                android:text="@string/saldo"
                android:layout_below="@id/up_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_saldo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_saldo"
                android:hint="@string/saldo"
                android:fontFamily="@font/nunitosans_regular"
                android:inputType="number"
                android:enabled="false"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/uptxt_role"
                android:text="@string/role"
                android:layout_below="@id/up_saldo"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:fontFamily="@font/gothammedium"
                android:textSize="16sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/uptxt_role"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_role"
                android:hint="@string/role"
                android:fontFamily="@font/nunitosans_regular"
                android:enabled="false">
            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/up_role"
                android:background="@drawable/round_btn"
                android:layout_marginTop="20dp"
                android:text="UBAH"
                android:textColor="@color/white"
                android:fontFamily="@font/gotham_bold"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:id="@+id/up_btnubah"
                android:layout_marginBottom="40sp"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>